--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <header>
   <link rel="stylesheet" href="style.css">
-  <h1>Heading 1</h1>
 </header>
 
 
 <body>
-  <p>Body 1</p>
+  <p-align:center>Body 1</p>
 </body>
 
 </html>
