--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
 
 <body>
-  <h2 text-align:center>Analysis & Inferences in</h2>
-  <h3 text-align:center><i>The Last Night of the World + You, Disappearing</i></h3>
+  <h2>Analysis & Inferences in</h2>
+  <h3><i>The Last Night of the World + You, Disappearing</i></h3>
+  
+  <img src="placeholder.png" onclick="this.src='placehoder2.png'">
+  
+  
 </body>
 
 </html>
