--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
-  <img src="placeholder.png" onclick="this.src='placehoder2.png'">
+  <img src="placeholder.png" onclick="this.src='placeholder2.png'">
   
   
 </body>
