--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
-  <img src="placeholder.png" onclick="this.src='placeholder2.png'">
+  <!--<img src="placeholder.png" onclick="this.src='placeholder2.png'"> -->
+  
+  
+  <img src="placeholder.png" onclick="one(); two();" >click</a>
+
+<script type="text/javascript">
+    function one(){
+        img src="placeholder2.png";
+    }
+
+    function two(){
+        img src="placeholder3.png";
+    }
+</script>
   
   
 </body>
