--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--<img src="placeholder.png" onclick="this.src='placeholder2.png'"> -->
   
   
-  <img src="placeholder.png" onclick="one(); two();" >click>
+  <img src="placeholder.png" onclick="one(); two();" >click</img>
 
 <script type="text/javascript">
     function one(){
