--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- <img src="placeholder.png" onclick="this.src='placeholder2.png'"> -->
   
   
-  <mg src="placeholder.png" onclick="one(); two();" ></img>
+  <img src="placeholder.png" onclick="one(); two();" ></img>
 
 <script type="text/javascript">
     function one(){
