--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <script type="text/javascript">
     function one(){
-        img src="placeholder2.png";
+        <img src="placeholder2.png">;
     }
 
     function two(){
-        img src="placeholder3.png";
+        <img src="placeholder3.png">;
     }
 </script>
   
