--- a/index.html
+++ b/index.html
@@ -13,17 +13,7 @@
   <!-- <img src="placeholder.png" onclick="this.src='placeholder2.png'"> -->
   
   
-  <img src="placeholder.png" onclick="one(); two();" ></img>
-
-<script type="text/javascript">
-    function one(){
-        <img src="placeholder2.png">;
-    }
-
-    function two(){
-        <img src="placeholder3.png">;
-    }
-</script>
+ <img src="placeholder.png" onclick="my_func()" >click</a>
   
   
 </body>
