--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
-  <!-- <img src="placeholder.png" onclick="this.src='placeholder2.png'"> -->
-  
-  
- <img src="placeholder.png" onclick="my_func()" >click</a>
+  <img src="placeholder.png" onclick="this.src='placeholder2.png'">
+  <img src="placeholder2.png" onclick="this.src='placeholder3.png'">
+ 
   
   
 </body>
