--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
+  
+  <div class="image1">
   <img src="placeholder.png" onclick="this.src='placeholder2.png'">
+  <div class="top-left">Top Left</div>
+</div>
+  
+  <div class="image2">
   <img src="placeholder2.png" onclick="this.src='placeholder3.png'">
+  <div class="top-left">Top Left</div>
+</div>
+  
+  <div class="image3">
+  <img src="placeholder3.png" onclick="this.src='placeholder.png'">
+  <div class="top-left">Top Left</div>
+</div>
  
   
   
