--- a/index.html
+++ b/index.html
@@ -12,19 +12,33 @@
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
   
-  <div class="image">
+  
+  
+  
+  
+  
+  
+  
+  
+  <div class="row">
+  <div class="column">
+    <div class="image">
   <img src="placeholder.png" onclick="this.src='placeholder2.png'">
   <div class="top-left">Top Left</div>
 </div>
-  
-  <div class="image">
+  </div>
+  <div class="column">
+    <div class="image">
   <img src="placeholder2.png" onclick="this.src='placeholder3.png'">
   <div class="top-left">Top Left</div>
 </div>
-  
-  <div class="image">
+  </div>
+  <div class="column">
+    <div class="image">
   <img src="placeholder3.png" onclick="this.src='placeholder.png'">
   <div class="top-left">Top Left</div>
+</div>
+  </div>
 </div>
  
   
