--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   
   <img src="placeholder.png" onclick="this.src='placeholder2.png'">
   <img src="placeholder2.png" onclick="this.src='placeholder3.png'">
-  <img src="placeholder3.png" onclick="this.src='placeholder.png'"> 
+  <img src="placeholder3.png" onclick="this.src='placeholder.png'">
+  
+  
+  
+  <p>
+        <img src="placeholder.png" id="imgClickAndChange" onclick="changeImage()"/>
+</p>
   
 </body>
 
