--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
         <img src="placeholder.png" id="imgClickAndChange" onclick="changeImage()"/>
 </p>
   
+  <script language="javascript">
+    function changeImage() {
+
+        if (document.getElementById("imgClickAndChange").src == "placeholder.png") 
+        {
+            document.getElementById("imgClickAndChange").src = "placeholder2.png";
+        }
+        if (document.getElementById("imgClickAndChange").src == "placeholder2.png)
+        {
+          document.getElementById("imgClickAndChange").src = "placeholder3.png";
+        }
+        else 
+        {
+            document.getElementById("imgClickAndChange").src = "placeholder.png";
+        }
+    }
+</script>
+  
 </body>
 
 </html>
