--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         {
             document.getElementById("imgClickAndChange").src = "placeholder2.png";
         }
-        if (document.getElementById("imgClickAndChange").src == "placeholder2.png)
+        else if (document.getElementById("imgClickAndChange").src == "placeholder2.png)
         {
           document.getElementById("imgClickAndChange").src = "placeholder3.png";
         }
