--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <header>
   <link rel="stylesheet" href="style.css">
-  <script src="javascript.js"></script>
+  <script type="text/javascript" src="javascript.js"></script>>
 </header>
 
 
