--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
   <p>
         <img src="placeholder.png" id="imgClickAndChange" onclick="changeImage()"/>
 </p>
+  <script language="javascript">
+    function changeImage() {
+
+        if (document.getElementById("imgClickAndChange").src == "http://www.userinterfaceicons.com/80x80/minimize.png") 
+        {
+            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/maximize.png";
+        }
+        else 
+        {
+            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/minimize.png";
+        }
+    }
+</script>
   
 </body>
 
