--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <script language="javascript">
     function changeImage() {
 
-        if (document.getElementById("imgClickAndChange").src == "http://www.userinterfaceicons.com/80x80/minimize.png") 
+        if (document.getElementById("imgClickAndChange").src == "placeholder.png") 
         {
-            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/maximize.png";
+            document.getElementById("imgClickAndChange").src = "placeholder2.png";
         }
         else 
         {
-            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/minimize.png";
+            document.getElementById("imgClickAndChange").src = "placeholder3.png";
         }
     }
 </script>
