--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         {
             document.getElementById("imgClickAndChange").src = "placeholder2.png";
         }
-        else 
+        else if (document.getElementById("imgClickAndChange").src == "placeholder2.png") 
         {
             document.getElementById("imgClickAndChange").src = "placeholder3.png";
+        }
+        else 
+        {
+            document.getElementById("imgClickAndChange").src = "placeholder.png";
         }
     }
 </script>
