--- a/index.html
+++ b/index.html
@@ -10,32 +10,53 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
-  <!--<img src="placeholder.png" onclick="this.src='placeholder2.png'">
-  <img src="placeholder2.png" onclick="this.src='placeholder3.png'">
-  <img src="placeholder3.png" onclick="this.src='placeholder.png'"> -->
+  <img src="placeholder.png">
+  <img src="placeholder2.png">
+  <img src="placeholder3.png">
   
   
   
-  <p>
-        <img src="placeholder.png" id="imgClickAndChange" onclick="changeImage()"/>
-</p>
-  <script language="javascript">
-    function changeImage() {
+  
+ <!-- Slideshow container -->
+<div class="slideshow-container">
 
-        if (document.getElementById("imgClickAndChange").src == "placeholder.png") 
-        {
-            document.getElementById("imgClickAndChange").src = "placeholder2.png";
-        }
-        else if (document.getElementById("imgClickAndChange").src == "placeholder2.png") 
-        {
-            document.getElementById("imgClickAndChange").src = "placeholder3.png";
-        }
-        else 
-        {
-            document.getElementById("imgClickAndChange").src = "placeholder.png";
-        }
-    }
-</script>
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="placeholder.png" style="width:100%">
+    <div class="text">placeholder</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="placeholder2.png" style="width:100%">
+    <div class="text">placeholder</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="placeholder3.png" style="width:100%">
+    <div class="text">placeholder</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+  
+  
+  
+  
+  
+  
   
 </body>
 
