--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World + You, Disappearing</i></h3>
   
-  <img src="placeholder.png">
+  <!-- <img src="placeholder.png">
   <img src="placeholder2.png">
-  <img src="placeholder3.png">
+  <img src="placeholder3.png"> -->
   
   
   
