--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h2>Analysis & Inferences in</h2>
-  <h3><i>The Last Night of the World + You, Disappearing</i></h3>
+  <h3><i>The Last Night of the World</i> + <i>You, Disappearing</i></h3>
   
   <!-- <img src="placeholder.png">
   <img src="placeholder2.png">
