--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="01.png" style="width=50%">
+    <img src="01.png" style="width=50%" "height=50%">
     <div class="text">placeholder</div>
   </div>
 
