--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="placeholder2.png" style="width:100%">
+    <img src="02.png" style="width:50%" "height=50%">
     <div class="text">placeholder</div>
   </div>
 
