--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="01.png" style="width=50%" "height=50%">
-    <div class="text">placeholder</div>
+    <img src="01.png" style="width=50%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
     <img src="02.png" style="width:50%" "height=50%">
-    <div class="text">placeholder</div>
   </div>
 
   <div class="mySlides fade">
