--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
   <script type="text/javascript" src="javascript.js"></script>
 </header>
 
-
 <body>
   <h2>Analysis & Inferences in</h2>
   <h3><i>The Last Night of the World</i> + <i>You, Disappearing</i></h3>
-  
-  <!-- <img src="placeholder.png">
-  <img src="placeholder2.png">
-  <img src="placeholder3.png"> -->
-  
-  
-  
   
  <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -34,7 +26,7 @@
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="placeholder3.png" style="width:100%">
+    <img src="03.png" style="width:50%" height="50%">
     <div class="text">placeholder</div>
   </div>
 
@@ -51,12 +43,5 @@
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
   
-  
-  
-  
-  
-  
-  
 </body>
-
 </html>
